--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
