--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "html-to-text": "^9.0.5",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
